--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    
+    <GridLayout
+        android:id="@+id/mainGrid"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/moreMealsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:columnCount="2"
+        android:rowCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.298" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_column="0"
+            app:layout_row="0">
+
+        </ImageButton>
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_column="1"
+            app:layout_row="0">
+
+        </ImageButton>
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_column="0"
+            app:layout_row="1">
+
+        </ImageButton>
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_column="1"
+            app:layout_row="1">
+
+        </ImageButton>
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
