--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    
+
     <GridLayout
         android:id="@+id/mainGrid"
         android:layout_width="match_parent"
@@ -19,34 +19,31 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
+            android:id="@+id/attendance"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            app:layout_column="0"
-            app:layout_row="0">
+            >
 
         </ImageButton>
 
         <ImageButton
             android:layout_width="200dp"
             android:layout_height="200dp"
-            app:layout_column="1"
-            app:layout_row="0">
+            >
 
         </ImageButton>
 
         <ImageButton
             android:layout_width="200dp"
             android:layout_height="200dp"
-            app:layout_column="0"
-            app:layout_row="1">
+            >
 
         </ImageButton>
 
         <ImageButton
             android:layout_width="200dp"
             android:layout_height="200dp"
-            app:layout_column="1"
-            app:layout_row="1">
+            >
 
         </ImageButton>
     </GridLayout>
