--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,8 @@
 
         <ImageButton
             android:layout_width="200dp"
-            android:layout_height="200dp">
+            android:layout_height="200dp"
+            android:background="@drawable/profile">
 
         </ImageButton>
     </GridLayout>
