--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         </ImageButton>
 
         <ImageButton
+            android:id="@+id/timetab"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/timetable">
@@ -42,6 +43,7 @@
         </ImageButton>
 
         <ImageButton
+            android:id="@+id/profilebtn"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/profile">
