--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".Account">
 
     <ListView
         android:id="@+id/schedulerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"></ListView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_sch"
@@ -26,7 +21,7 @@
         android:layout_gravity="bottom"
         android:clickable="true"
         android:elevation="5dp"
-        android:src="@drawable/ic_content_add_circle"
+        android:src="@drawable/addstudent.png"
         app:backgroundTint="@color/colorPrimary"
-        app:borderWidth="0dp"  />
+          />
 </RelativeLayout>
