--- a/app/src/main/res/layout/register_student.xml
+++ b/app/src/main/res/layout/register_student.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Account">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,6 +35,33 @@
             android:hint="Roll Number"
             android:textSize="20sp"
             android:paddingBottom="5dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/register"
+            android:hint="Admission Number"
+            android:textSize="20sp"
+            android:paddingBottom="5dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/contact"
+            android:inputType="phone"
+            android:hint="Contact"
+            android:textSize="20sp"
+            android:paddingBottom="5dp" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="SAVE"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:background="@color/colorPrimary"
+            android:id="@+id/buttonSAVE"
+            android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
 
