--- a/app/src/main/res/layout/activity_cgp.xml
+++ b/app/src/main/res/layout/activity_cgp.xml
@@ -72,7 +72,9 @@
             android:layout_alignEnd="@+id/et2"
             android:layout_alignRight="@+id/et2"
             android:ems="10"
-            android:inputType="numberDecimal"></EditText>
+            android:inputType="numberDecimal">
+
+        </EditText>
       <EditText
         android:id="@+id/et8"
         android:layout_width="70dp"
@@ -83,7 +85,9 @@
         android:layout_alignEnd="@+id/et2"
         android:layout_alignRight="@+id/et2"
         android:ems="10"
-        android:inputType="numberDecimal"></EditText>
+        android:inputType="numberDecimal">
+
+      </EditText>
       <EditText
         android:id="@+id/et5"
         android:layout_width="70dp"
@@ -94,7 +98,9 @@
         android:layout_alignEnd="@+id/et2"
         android:layout_alignRight="@+id/et2"
         android:ems="10"
-        android:inputType="numberDecimal"></EditText>
+        android:inputType="numberDecimal">
+
+      </EditText>
 
       <EditText
         android:id="@+id/et6"
@@ -106,7 +112,8 @@
         android:layout_alignEnd="@+id/et2"
         android:layout_alignRight="@+id/et2"
         android:ems="10"
-        android:inputType="numberDecimal"></EditText>
+        android:inputType="numberDecimal">
+      </EditText>
       <EditText
         android:id="@+id/et7"
         android:layout_width="70dp"
@@ -117,7 +124,9 @@
         android:layout_alignEnd="@+id/et2"
         android:layout_alignRight="@+id/et2"
         android:ems="10"
-        android:inputType="numberDecimal"></EditText>
+        android:inputType="numberDecimal">
+
+      </EditText>
 
         <Button
             android:id="@+id/findbtn"
