--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,15 @@
 
     <LinearLayout
         android:layout_width="215dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#ffffff"
         android:elevation="5dp"
         android:orientation="vertical"
         android:padding="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/cgpa"
@@ -26,7 +24,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:clickable="true"
-            android:src="@drawable/gpa" />
+            android:src="@drawable/icon_cgpa" />
 
         <TextView
             android:layout_width="match_parent"
@@ -43,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/timetable" />
+            android:src="@drawable/icon_timetable" />
 
         <TextView
             android:layout_width="match_parent"
@@ -59,13 +57,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/timetable" />
+            android:src="@drawable/icon_addstudent" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="TITLE HERE"
+            android:text="ADD STUDENT"
             android:textColor="#000000"
             android:textSize="16dp"
             android:textStyle="bold" />
@@ -87,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/attendance" />
+            android:src="@drawable/icon_attendance" />
 
         <TextView
             android:layout_width="match_parent"
@@ -119,7 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/profile" />
+            android:src="@drawable/icon_profile" />
 
         <TextView
             android:layout_width="match_parent"
