--- a/app/src/main/res/layout/activity_gpa_result.xml
+++ b/app/src/main/res/layout/activity_gpa_result.xml
@@ -5,5 +5,24 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".GpaResultActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="#f4f4f4"
+        android:elevation="5dp"
+        android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_marginTop="55dp"
+        android:text="Your GPA"
+        android:textSize="40dp"/>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
