--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,7 +7,7 @@
         app:showAsAction="never"/>
 
     <item android:id="@+id/item2"
-        android:title="Help"
+        android:title="Contact"
         app:showAsAction="never"/>
 
     <item android:id="@+id/item3"
