--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Account">
+    tools:context=".RegisterStudentActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,25 +23,18 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/edit_name"
-            android:hint="Name"
+            android:id="@+id/first_name"
+            android:hint="First Name"
             android:textSize="20sp"
             android:paddingBottom="5dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/roll"
-            android:inputType="numberDecimal"
-            android:hint="Roll Number"
+            android:id="@+id/last_name"
+            android:hint="Last Name"
             android:textSize="20sp"
             android:paddingBottom="5dp" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/register"
-            android:hint="Admission Number"
-            android:textSize="20sp"
-            android:paddingBottom="5dp" />
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -62,7 +55,6 @@
             android:background="@color/colorPrimary"
             android:id="@+id/buttonSAVE"
             android:layout_gravity="center_horizontal" />
-
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
