Added AttendanceAdapter.java, AttendanceModel.java and AttendanceViewHolder.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="CGPA"
+            android:text="GPA"
             android:textColor="#000000"
             android:textSize="16dp"
             android:textStyle="bold" />
