--- a/app/src/main/res/layout/model_attendance.xml
+++ b/app/src/main/res/layout/model_attendance.xml
@@ -20,6 +20,6 @@
         android:id="@+id/attMarker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="true"
+        android:checked="false"
         />
 </LinearLayout>
