--- a/app/src/main/res/menu/attendance_menu.xml
+++ b/app/src/main/res/menu/attendance_menu.xml
@@ -3,14 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/item1"
-        android:title="About"
+        android:title="Home"
         app:showAsAction="never"/>
 
-    <item android:id="@+id/item2"
+    <item android:id="@+id/viewAttendance"
         android:title="View Attendance"
         app:showAsAction="never"/>
 
-    <item android:id="@+id/item3"
-        android:title="Logout"
-        app:showAsAction="never"/>
+
 </menu>
